--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| श्री॒ गु॒रु॒भ्यो॒ न॒मः॒ हरिः ॐ ||</h1>
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 08-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 09-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -3015,7 +3015,7 @@
 <td class='VargaStyle1'>अस्मै᳚ व॒यं यद्वा॒वान॒ तद्वि॑विष्म॒ इन्द्रा᳚य॒ यो नः॑ प्र॒दिवो॒, अप॒स्कः |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | इन्द्रः | त्रिष्टुप्}</span><p>सु॒ते सोमे᳚ स्तु॒मसि॒ शंस॑दु॒क्थेन्द्रा᳚य॒ ब्रह्म॒ वर्ध॑नं॒ यथास॑त् ||<span class='MantraNumbering'>{5/10}{4.6.15.5}{6.23.5}{6.2.8.5}{464, 4625}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ब्रह्मा᳚णि॒ हि च॑कृ॒षे वर्ध॑नानि॒ ताव॑त्त इन्द्र म॒तिभि᳚र्विविष्मः |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | इन्द्रः | त्रिष्टुप्}</span><p>सु॒ते सोमे᳚ सुतपाः॒ शंत॑मानि॒ राण्ड्या᳚ क्रियास्म॒ वक्ष॑णानि य॒ज्ञैः ||<span class='MantraNumbering'>{6/10}{4.6.16.1}{6.23.6}{6.2.8.6}{464, 4626}</span></td>
+<td class='VargaStyle2'>ब्रह्मा᳚णि॒ हि च॑कृ॒षे वर्ध॑नानि॒ ताव॑त्त इन्द्र म॒तिभि᳚र्विविष्मः |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | इन्द्रः | त्रिष्टुप्}</span><p>सु॒ते सोमे᳚ सुतपाः॒ शंत॑मानि॒ रान्द्र्या᳚ क्रियास्म॒ वक्ष॑णानि य॒ज्ञैः ||<span class='MantraNumbering'>{6/10}{4.6.16.1}{6.23.6}{6.2.8.6}{464, 4626}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>स नो᳚ बोधि पुरो॒ळाशं॒ ररा᳚णः॒ पिबा॒ तु सोमं॒ गो,ऋ॑जीकमिन्द्र |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | इन्द्रः | त्रिष्टुप्}</span><p>एदं ब॒र्हिर्यज॑मानस्य सीदो॒रुं कृ॑धि त्वाय॒त उ॑ लो॒कम् ||<span class='MantraNumbering'>{7/10}{4.6.16.2}{6.23.7}{6.2.8.7}{464, 4627}</span></td>
