--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format4/RVS-Devanagari-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format4/RVS-Devanagari-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 08-Jan-2025]</h6>
+<br> [Last updated on: 09-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -3017,7 +3017,7 @@
 <td class='VargaStyle1'>अस्मै᳚व॒यंयद्वा॒वान॒तद्वि॑विष्म॒इन्द्रा᳚य॒योनः॑प्र॒दिवो॒,अप॒स्कः |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | इन्द्रः | त्रिष्टुप्}</span><p>सु॒तेसोमे᳚स्तु॒मसि॒शंस॑दु॒क्थेन्द्रा᳚य॒ब्रह्म॒वर्ध॑नं॒यथास॒॑‌त्(स्वाहा᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ब्रह्मा᳚णि॒हिच॑कृ॒षेवर्ध॑नानि॒ताव॑त्तइन्द्रम॒तिभि᳚र्विविष्मः |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | इन्द्रः | त्रिष्टुप्}</span><p>सु॒तेसोमे᳚सुतपाः॒शंत॑मानि॒राण्ड्या᳚क्रियास्म॒वक्ष॑णानिय॒ज्ञैः॒(स्वाहा᳚) || 6 || <span class='MantraNumbering'>वर्ग:16</span></td>
+<td class='VargaStyle2'>ब्रह्मा᳚णि॒हिच॑कृ॒षेवर्ध॑नानि॒ताव॑त्तइन्द्रम॒तिभि᳚र्विविष्मः |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | इन्द्रः | त्रिष्टुप्}</span><p>सु॒तेसोमे᳚सुतपाः॒शंत॑मानि॒रान्द्र्या᳚क्रियास्म॒वक्ष॑णानिय॒ज्ञैः॒(स्वाहा᳚) || 6 || <span class='MantraNumbering'>वर्ग:16</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>सनो᳚बोधिपुरो॒ळाशं॒ररा᳚णः॒पिबा॒तुसोमं॒गो,ऋ॑जीकमिन्द्र |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | इन्द्रः | त्रिष्टुप्}</span><p>एदंब॒र्हिर्यज॑मानस्यसीदो॒रुंकृ॑धित्वाय॒तउ॑लो॒कम्(स्वाहा᳚) || 7 || </td>
