--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ஶ்ரீ॒ கு³॒ரு॒ப்⁴யோ॒ ந॒ம॒꞉ ஹரி꞉ ௐ ||</h1>
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 08-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 09-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -3015,7 +3015,7 @@
 <td class='VargaStyle1'>அஸ்மை᳚ வ॒யம்ʼ யத்³வா॒வான॒ தத்³வி॑விஷ்ம॒ இந்த்³ரா᳚ய॒ யோ ந॑꞉ ப்ர॒தி³வோ॒, அப॒ஸ்க꞉ |<span class='RishiDevChandas'>{பா³ர்ஹஸ்பத்யோ ப⁴ரத்³வாஜ꞉ | இந்த்³ர꞉ | த்ரிஷ்டுப்}</span><p>ஸு॒தே ஸோமே᳚ ஸ்து॒மஸி॒ ஶம்ʼஸ॑து³॒க்தே²ந்த்³ரா᳚ய॒ ப்³ரஹ்ம॒ வர்த⁴॑னம்॒ʼ யதா²ஸ॑த் ||<span class='MantraNumbering'>{5/10}{4.6.15.5}{6.23.5}{6.2.8.5}{464, 4625}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ப்³ரஹ்மா᳚ணி॒ ஹி ச॑க்ரு॒ʼஷே வர்த⁴॑னானி॒ தாவ॑த்த இந்த்³ர ம॒திபி⁴᳚ர்விவிஷ்ம꞉ |<span class='RishiDevChandas'>{பா³ர்ஹஸ்பத்யோ ப⁴ரத்³வாஜ꞉ | இந்த்³ர꞉ | த்ரிஷ்டுப்}</span><p>ஸு॒தே ஸோமே᳚ ஸுதபா॒꞉ ஶந்த॑மானி॒ ராண்ட்³யா᳚ க்ரியாஸ்ம॒ வக்ஷ॑ணானி ய॒ஜ்ஞை꞉ ||<span class='MantraNumbering'>{6/10}{4.6.16.1}{6.23.6}{6.2.8.6}{464, 4626}</span></td>
+<td class='VargaStyle2'>ப்³ரஹ்மா᳚ணி॒ ஹி ச॑க்ரு॒ʼஷே வர்த⁴॑னானி॒ தாவ॑த்த இந்த்³ர ம॒திபி⁴᳚ர்விவிஷ்ம꞉ |<span class='RishiDevChandas'>{பா³ர்ஹஸ்பத்யோ ப⁴ரத்³வாஜ꞉ | இந்த்³ர꞉ | த்ரிஷ்டுப்}</span><p>ஸு॒தே ஸோமே᳚ ஸுதபா॒꞉ ஶந்த॑மானி॒ ராந்த்³ர்யா᳚ க்ரியாஸ்ம॒ வக்ஷ॑ணானி ய॒ஜ்ஞை꞉ ||<span class='MantraNumbering'>{6/10}{4.6.16.1}{6.23.6}{6.2.8.6}{464, 4626}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ஸ நோ᳚ போ³தி⁴ புரோ॒ளாஶம்॒ʼ ரரா᳚ண॒꞉ பிபா³॒ து ஸோமம்॒ʼ கோ³,ரு॑ʼஜீகமிந்த்³ர |<span class='RishiDevChandas'>{பா³ர்ஹஸ்பத்யோ ப⁴ரத்³வாஜ꞉ | இந்த்³ர꞉ | த்ரிஷ்டுப்}</span><p>ஏத³ம்ʼ ப³॒ர்ஹிர்யஜ॑மானஸ்ய ஸீதோ³॒ரும்ʼ க்ரு॑ʼதி⁴ த்வாய॒த உ॑ லோ॒கம் ||<span class='MantraNumbering'>{7/10}{4.6.16.2}{6.23.7}{6.2.8.7}{464, 4627}</span></td>
