--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format3/RVS-Telugu-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format3/RVS-Telugu-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 08-Jan-2025]</h6>
+<br> [Last updated on: 09-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -3017,7 +3017,7 @@
 <td class='VargaStyle1'>అస్మై᳚వ॒యంయద్వా॒వాన॒తద్వి॑విష్మ॒ఇంద్రా᳚య॒యోనః॑ప్ర॒దివో॒,అప॒స్కః |<p>సు॒తేసోమే᳚స్తు॒మసి॒శంస॑దు॒క్థేంద్రా᳚య॒బ్రహ్మ॒వర్ధ॑నం॒యథాస॑త్ || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>బ్రహ్మా᳚ణి॒హిచ॑కృ॒షేవర్ధ॑నాని॒తావ॑త్తఇంద్రమ॒తిభి᳚ర్వివిష్మః |<p>సు॒తేసోమే᳚సుతపాః॒శంత॑మాని॒రాండ్యా᳚క్రియాస్మ॒వక్ష॑ణానియ॒జ్ఞైః || 6 || <span class='MantraNumbering'>వర్గ:16</span></td>
+<td class='VargaStyle2'>బ్రహ్మా᳚ణి॒హిచ॑కృ॒షేవర్ధ॑నాని॒తావ॑త్తఇంద్రమ॒తిభి᳚ర్వివిష్మః |<p>సు॒తేసోమే᳚సుతపాః॒శంత॑మాని॒రాంద్ర్యా᳚క్రియాస్మ॒వక్ష॑ణానియ॒జ్ఞైః || 6 || <span class='MantraNumbering'>వర్గ:16</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>సనో᳚బోధిపురో॒ళాశం॒రరా᳚ణః॒పిబా॒తుసోమం॒గో,ఋ॑జీకమింద్ర |<p>ఏదంబ॒ర్హిర్యజ॑మానస్యసీదో॒రుంకృ॑ధిత్వాయ॒తఉ॑లో॒కం || 7 || </td>
