--- a/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M06.html
+++ b/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M06.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| శ్రీ॒ గు॒రు॒భ్యో॒ న॒మః॒ హరిః ఓం ||</h1>
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (మండల: 06) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 14-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 09-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -852,7 +852,7 @@
 <td class='VargaStyle1'>అస్మై᳚ వ॒యం యద్వా॒వాన॒ తద్వి॑విష్మ॒ ఇంద్రా᳚య॒ యో నః॑ ప్ర॒దివో॒, అప॒స్కః |<span class='RishiDevChandas'>{బార్హస్పత్యో భరద్వాజః | ఇంద్రః | త్రిష్టుప్}</span><p>సు॒తే సోమే᳚ స్తు॒మసి॒ శంస॑దు॒క్థేంద్రా᳚య॒ బ్రహ్మ॒ వర్ధ॑నం॒ యథాస॑త్ ||<span class='MantraNumbering'>{5/10}{6.23.5}{6.2.8.5}{4.6.15.5}{464, 4625}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>బ్రహ్మా᳚ణి॒ హి చ॑కృ॒షే వర్ధ॑నాని॒ తావ॑త్త ఇంద్ర మ॒తిభి᳚ర్వివిష్మః |<span class='RishiDevChandas'>{బార్హస్పత్యో భరద్వాజః | ఇంద్రః | త్రిష్టుప్}</span><p>సు॒తే సోమే᳚ సుతపాః॒ శంత॑మాని॒ రాండ్యా᳚ క్రియాస్మ॒ వక్ష॑ణాని య॒జ్ఞైః ||<span class='MantraNumbering'>{6/10}{6.23.6}{6.2.8.6}{4.6.16.1}{464, 4626}</span></td>
+<td class='VargaStyle2'>బ్రహ్మా᳚ణి॒ హి చ॑కృ॒షే వర్ధ॑నాని॒ తావ॑త్త ఇంద్ర మ॒తిభి᳚ర్వివిష్మః |<span class='RishiDevChandas'>{బార్హస్పత్యో భరద్వాజః | ఇంద్రః | త్రిష్టుప్}</span><p>సు॒తే సోమే᳚ సుతపాః॒ శంత॑మాని॒ రాంద్ర్యా᳚ క్రియాస్మ॒ వక్ష॑ణాని య॒జ్ఞైః ||<span class='MantraNumbering'>{6/10}{6.23.6}{6.2.8.6}{4.6.16.1}{464, 4626}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>స నో᳚ బోధి పురో॒ళాశం॒ రరా᳚ణః॒ పిబా॒ తు సోమం॒ గో,ఋ॑జీకమింద్ర |<span class='RishiDevChandas'>{బార్హస్పత్యో భరద్వాజః | ఇంద్రః | త్రిష్టుప్}</span><p>ఏదం బ॒ర్హిర్యజ॑మానస్య సీదో॒రుం కృ॑ధి త్వాయ॒త ఉ॑ లో॒కం ||<span class='MantraNumbering'>{7/10}{6.23.7}{6.2.8.7}{4.6.16.2}{464, 4627}</span></td>
