--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 08-Jan-2025]</h6>
+<br> [Last updated on: 09-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -3017,7 +3017,7 @@
 <td class='VargaStyle1'>ಅಸ್ಮೈ᳚ವ॒ಯಂಯದ್ವಾ॒ವಾನ॒ತದ್ವಿ॑ವಿಷ್ಮ॒ಇಂದ್ರಾ᳚ಯ॒ಯೋನಃ॑ಪ್ರ॒ದಿವೋ॒,ಅಪ॒ಸ್ಕಃ |<span class='RishiDevChandas'>{ಬಾರ್ಹಸ್ಪತ್ಯೋ ಭರದ್ವಾಜಃ | ಇಂದ್ರಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸು॒ತೇಸೋಮೇ᳚ಸ್ತು॒ಮಸಿ॒ಶಂಸ॑ದು॒ಕ್ಥೇಂದ್ರಾ᳚ಯ॒ಬ್ರಹ್ಮ॒ವರ್ಧ॑ನಂ॒ಯಥಾಸ॒॑‌ತ್(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಬ್ರಹ್ಮಾ᳚ಣಿ॒ಹಿಚ॑ಕೃ॒ಷೇವರ್ಧ॑ನಾನಿ॒ತಾವ॑ತ್ತಇಂದ್ರಮ॒ತಿಭಿ᳚ರ್ವಿವಿಷ್ಮಃ |<span class='RishiDevChandas'>{ಬಾರ್ಹಸ್ಪತ್ಯೋ ಭರದ್ವಾಜಃ | ಇಂದ್ರಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸು॒ತೇಸೋಮೇ᳚ಸುತಪಾಃ॒ಶಂತ॑ಮಾನಿ॒ರಾಂಡ್ಯಾ᳚ಕ್ರಿಯಾಸ್ಮ॒ವಕ್ಷ॑ಣಾನಿಯ॒ಜ್ಞೈಃ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:16</span></td>
+<td class='VargaStyle2'>ಬ್ರಹ್ಮಾ᳚ಣಿ॒ಹಿಚ॑ಕೃ॒ಷೇವರ್ಧ॑ನಾನಿ॒ತಾವ॑ತ್ತಇಂದ್ರಮ॒ತಿಭಿ᳚ರ್ವಿವಿಷ್ಮಃ |<span class='RishiDevChandas'>{ಬಾರ್ಹಸ್ಪತ್ಯೋ ಭರದ್ವಾಜಃ | ಇಂದ್ರಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸು॒ತೇಸೋಮೇ᳚ಸುತಪಾಃ॒ಶಂತ॑ಮಾನಿ॒ರಾಂದ್ರ್ಯಾ᳚ಕ್ರಿಯಾಸ್ಮ॒ವಕ್ಷ॑ಣಾನಿಯ॒ಜ್ಞೈಃ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:16</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಸನೋ᳚ಬೋಧಿಪುರೋ॒ಳಾಶಂ॒ರರಾ᳚ಣಃ॒ಪಿಬಾ॒ತುಸೋಮಂ॒ಗೋ,ಋ॑ಜೀಕಮಿಂದ್ರ |<span class='RishiDevChandas'>{ಬಾರ್ಹಸ್ಪತ್ಯೋ ಭರದ್ವಾಜಃ | ಇಂದ್ರಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಏದಂಬ॒ರ್ಹಿರ್‍ಯಜ॑ಮಾನಸ್ಯಸೀದೋ॒ರುಂಕೃ॑ಧಿತ್ವಾಯ॒ತಉ॑ಲೋ॒ಕಂ(ಸ್ವಾಹಾ᳚) || 7 || </td>
