--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M06.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M06.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 06) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 14-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 09-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -852,7 +852,7 @@
 <td class='VargaStyle1'>ಅಸ್ಮೈ᳚ ವ॒ಯಂ ಯದ್ವಾ॒ವಾನ॒ ತದ್ವಿ॑ವಿಷ್ಮ॒ ಇಂದ್ರಾ᳚ಯ॒ ಯೋ ನಃ॑ ಪ್ರ॒ದಿವೋ॒, ಅಪ॒ಸ್ಕಃ |<span class='RishiDevChandas'>{ಬಾರ್ಹಸ್ಪತ್ಯೋ ಭರದ್ವಾಜಃ | ಇಂದ್ರಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸು॒ತೇ ಸೋಮೇ᳚ ಸ್ತು॒ಮಸಿ॒ ಶಂಸ॑ದು॒ಕ್ಥೇಂದ್ರಾ᳚ಯ॒ ಬ್ರಹ್ಮ॒ ವರ್ಧ॑ನಂ॒ ಯಥಾಸ॑ತ್ ||<span class='MantraNumbering'>{5/10}{6.23.5}{6.2.8.5}{4.6.15.5}{464, 4625}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಬ್ರಹ್ಮಾ᳚ಣಿ॒ ಹಿ ಚ॑ಕೃ॒ಷೇ ವರ್ಧ॑ನಾನಿ॒ ತಾವ॑ತ್ತ ಇಂದ್ರ ಮ॒ತಿಭಿ᳚ರ್ವಿವಿಷ್ಮಃ |<span class='RishiDevChandas'>{ಬಾರ್ಹಸ್ಪತ್ಯೋ ಭರದ್ವಾಜಃ | ಇಂದ್ರಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸು॒ತೇ ಸೋಮೇ᳚ ಸುತಪಾಃ॒ ಶಂತ॑ಮಾನಿ॒ ರಾಂಡ್ಯಾ᳚ ಕ್ರಿಯಾಸ್ಮ॒ ವಕ್ಷ॑ಣಾನಿ ಯ॒ಜ್ಞೈಃ ||<span class='MantraNumbering'>{6/10}{6.23.6}{6.2.8.6}{4.6.16.1}{464, 4626}</span></td>
+<td class='VargaStyle2'>ಬ್ರಹ್ಮಾ᳚ಣಿ॒ ಹಿ ಚ॑ಕೃ॒ಷೇ ವರ್ಧ॑ನಾನಿ॒ ತಾವ॑ತ್ತ ಇಂದ್ರ ಮ॒ತಿಭಿ᳚ರ್ವಿವಿಷ್ಮಃ |<span class='RishiDevChandas'>{ಬಾರ್ಹಸ್ಪತ್ಯೋ ಭರದ್ವಾಜಃ | ಇಂದ್ರಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸು॒ತೇ ಸೋಮೇ᳚ ಸುತಪಾಃ॒ ಶಂತ॑ಮಾನಿ॒ ರಾಂದ್ರ್ಯಾ᳚ ಕ್ರಿಯಾಸ್ಮ॒ ವಕ್ಷ॑ಣಾನಿ ಯ॒ಜ್ಞೈಃ ||<span class='MantraNumbering'>{6/10}{6.23.6}{6.2.8.6}{4.6.16.1}{464, 4626}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಸ ನೋ᳚ ಬೋಧಿ ಪುರೋ॒ಳಾಶಂ॒ ರರಾ᳚ಣಃ॒ ಪಿಬಾ॒ ತು ಸೋಮಂ॒ ಗೋ,ಋ॑ಜೀಕಮಿಂದ್ರ |<span class='RishiDevChandas'>{ಬಾರ್ಹಸ್ಪತ್ಯೋ ಭರದ್ವಾಜಃ | ಇಂದ್ರಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಏದಂ ಬ॒ರ್ಹಿರ್‍ಯಜ॑ಮಾನಸ್ಯ ಸೀದೋ॒ರುಂ ಕೃ॑ಧಿ ತ್ವಾಯ॒ತ ಉ॑ ಲೋ॒ಕಂ ||<span class='MantraNumbering'>{7/10}{6.23.7}{6.2.8.7}{4.6.16.2}{464, 4627}</span></td>
