--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format1/RVS-Malayalam-F1-M06.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format1/RVS-Malayalam-F1-M06.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ശ്രീ॒ ഗു॒രു॒ഭ്യോ॒ ന॒മഃ॒ ഹരിഃ ഓം ||</h1>
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 06) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 14-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 09-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -852,7 +852,7 @@
 <td class='VargaStyle1'>അസ്മൈ᳚ വ॒യം യദ്വാ॒വാന॒ തദ്വി॑വിഷ്മ॒ ഇന്ദ്രാ᳚യ॒ യോ നഃ॑ പ്ര॒ദിവോ॒, അപ॒സ്കഃ |<span class='RishiDevChandas'>{ബാർഹസ്പത്യോ ഭരദ്വാജഃ | ഇന്ദ്രഃ | ത്രിഷ്ടുപ്}</span><p>സു॒തേ സോമേ᳚ സ്തു॒മസി॒ ശംസ॑ദു॒ക്ഥേന്ദ്രാ᳚യ॒ ബ്രഹ്മ॒ വർധ॑നം॒ യഥാസ॑ത് ||<span class='MantraNumbering'>{5/10}{6.23.5}{6.2.8.5}{4.6.15.5}{464, 4625}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ബ്രഹ്മാ᳚ണി॒ ഹി ച॑കൃ॒ഷേ വർധ॑നാനി॒ താവ॑ത്ത ഇന്ദ്ര മ॒തിഭി᳚ർവിവിഷ്മഃ |<span class='RishiDevChandas'>{ബാർഹസ്പത്യോ ഭരദ്വാജഃ | ഇന്ദ്രഃ | ത്രിഷ്ടുപ്}</span><p>സു॒തേ സോമേ᳚ സുതപാഃ॒ ശന്ത॑മാനി॒ രാണ്ഡ്യാ᳚ ക്രിയാസ്മ॒ വക്ഷ॑ണാനി യ॒ജ്ഞൈഃ ||<span class='MantraNumbering'>{6/10}{6.23.6}{6.2.8.6}{4.6.16.1}{464, 4626}</span></td>
+<td class='VargaStyle2'>ബ്രഹ്മാ᳚ണി॒ ഹി ച॑കൃ॒ഷേ വർധ॑നാനി॒ താവ॑ത്ത ഇന്ദ്ര മ॒തിഭി᳚ർവിവിഷ്മഃ |<span class='RishiDevChandas'>{ബാർഹസ്പത്യോ ഭരദ്വാജഃ | ഇന്ദ്രഃ | ത്രിഷ്ടുപ്}</span><p>സു॒തേ സോമേ᳚ സുതപാഃ॒ ശന്ത॑മാനി॒ രാന്ദ്ര്യാ᳚ ക്രിയാസ്മ॒ വക്ഷ॑ണാനി യ॒ജ്ഞൈഃ ||<span class='MantraNumbering'>{6/10}{6.23.6}{6.2.8.6}{4.6.16.1}{464, 4626}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>സ നോ᳚ ബോധി പുരോ॒ളാശം॒ രരാ᳚ണഃ॒ പിബാ॒ തു സോമം॒ ഗോ,ഋ॑ജീകമിന്ദ്ര |<span class='RishiDevChandas'>{ബാർഹസ്പത്യോ ഭരദ്വാജഃ | ഇന്ദ്രഃ | ത്രിഷ്ടുപ്}</span><p>ഏദം ബ॒ർഹിര്യജ॑മാനസ്യ സീദോ॒രും കൃ॑ധി ത്വായ॒ത ഉ॑ ലോ॒കം ||<span class='MantraNumbering'>{7/10}{6.23.7}{6.2.8.7}{4.6.16.2}{464, 4627}</span></td>
