--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format3/RVS-Malayalam-F3-M06.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format3/RVS-Malayalam-F3-M06.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 06) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 14-Nov-2024]</h6>
+<br> [Last updated on: 09-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -877,7 +877,7 @@
 <td class='VargaStyle1'>അസ്മൈ᳚വ॒യംയദ്വാ॒വാന॒തദ്വി॑വിഷ്മ॒ഇന്ദ്രാ᳚യ॒യോനഃ॑പ്ര॒ദിവോ॒,അപ॒സ്കഃ |<p>സു॒തേസോമേ᳚സ്തു॒മസി॒ശംസ॑ദു॒ക്ഥേന്ദ്രാ᳚യ॒ബ്രഹ്മ॒വർധ॑നം॒യഥാസ॑ത് || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ബ്രഹ്മാ᳚ണി॒ഹിച॑കൃ॒ഷേവർധ॑നാനി॒താവ॑ത്തഇന്ദ്രമ॒തിഭി᳚ർവിവിഷ്മഃ |<p>സു॒തേസോമേ᳚സുതപാഃ॒ശന്ത॑മാനി॒രാണ്ഡ്യാ᳚ക്രിയാസ്മ॒വക്ഷ॑ണാനിയ॒ജ്ഞൈഃ || 6 || <span class='MantraNumbering'>വർഗ:16</span></td>
+<td class='VargaStyle2'>ബ്രഹ്മാ᳚ണി॒ഹിച॑കൃ॒ഷേവർധ॑നാനി॒താവ॑ത്തഇന്ദ്രമ॒തിഭി᳚ർവിവിഷ്മഃ |<p>സു॒തേസോമേ᳚സുതപാഃ॒ശന്ത॑മാനി॒രാന്ദ്ര്യാ᳚ക്രിയാസ്മ॒വക്ഷ॑ണാനിയ॒ജ്ഞൈഃ || 6 || <span class='MantraNumbering'>വർഗ:16</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>സനോ᳚ബോധിപുരോ॒ളാശം॒രരാ᳚ണഃ॒പിബാ॒തുസോമം॒ഗോ,ഋ॑ജീകമിന്ദ്ര |<p>ഏദംബ॒ർഹിര്യജ॑മാനസ്യസീദോ॒രുംകൃ॑ധിത്വായ॒തഉ॑ലോ॒കം || 7 || </td>
