--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format3/RVS-Tamil-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format3/RVS-Tamil-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 08-Jan-2025]</h6>
+<br> [Last updated on: 09-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -3017,7 +3017,7 @@
 <td class='VargaStyle1'>அஸ்மை᳚வ॒யம்ʼயத்³வா॒வான॒தத்³வி॑விஷ்ம॒இந்த்³ரா᳚ய॒யோந॑꞉ப்ர॒தி³வோ॒,அப॒ஸ்க꞉ |<p>ஸு॒தேஸோமே᳚ஸ்து॒மஸி॒ஶம்ʼஸ॑து³॒க்தே²ந்த்³ரா᳚ய॒ப்³ரஹ்ம॒வர்த⁴॑னம்॒ʼயதா²ஸ॑த் || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ப்³ரஹ்மா᳚ணி॒ஹிச॑க்ரு॒ʼஷேவர்த⁴॑னானி॒தாவ॑த்தஇந்த்³ரம॒திபி⁴᳚ர்விவிஷ்ம꞉ |<p>ஸு॒தேஸோமே᳚ஸுதபா॒꞉ஶந்த॑மானி॒ராண்ட்³யா᳚க்ரியாஸ்ம॒வக்ஷ॑ணானிய॒ஜ்ஞை꞉ || 6 || <span class='MantraNumbering'>வர்க³:16</span></td>
+<td class='VargaStyle2'>ப்³ரஹ்மா᳚ணி॒ஹிச॑க்ரு॒ʼஷேவர்த⁴॑னானி॒தாவ॑த்தஇந்த்³ரம॒திபி⁴᳚ர்விவிஷ்ம꞉ |<p>ஸு॒தேஸோமே᳚ஸுதபா॒꞉ஶந்த॑மானி॒ராந்த்³ர்யா᳚க்ரியாஸ்ம॒வக்ஷ॑ணானிய॒ஜ்ஞை꞉ || 6 || <span class='MantraNumbering'>வர்க³:16</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ஸநோ᳚போ³தி⁴புரோ॒ளாஶம்॒ʼரரா᳚ண॒꞉பிபா³॒துஸோமம்॒ʼகோ³,ரு॑ʼஜீகமிந்த்³ர |<p>ஏத³ம்ʼப³॒ர்ஹிர்யஜ॑மானஸ்யஸீதோ³॒ரும்ʼக்ரு॑ʼதி⁴த்வாய॒தஉ॑லோ॒கம் || 7 || </td>
