--- a/Rigveda/SamhitaPatha/Devanagari/Mandala/Format1/RVS-Devanagari-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Mandala/Format1/RVS-Devanagari-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| श्री॒ गु॒रु॒भ्यो॒ न॒मः॒ हरिः ॐ ||</h1>
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (मंडल: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{अष्टक,अध्याय,वर्ग,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 08-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{अष्टक,अध्याय,वर्ग,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 10-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1980,10 +1980,10 @@
 <td class='SuktaLabel'>[67] बळित्थादेवेति पंचर्चस्य सूक्तस्यात्रेयोयजतो मित्रावरुणावनुष्टुप् |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>बळि॒त्था दे᳚व निष्कृ॒तमादि॑त्या यज॒तं बृ॒हत् |<span class='RishiDevChandas'>{आत्रेयो यजतः | मित्रावरुणौ | अनुष्टुप्}</span><p>वरु॑ण॒ मित्रार्य॑म॒न्वर्षि॑ष्ठं क्ष॒त्रमा᳚शाथे ||<span class='MantraNumbering'>{1/5}{5.67.1}{5.5.11.1}{4.4.5.1}{421, 4231}</span></td>
+<td class='VargaStyle1'>बळि॒त्था दे᳚व निष्कृ॒तमादि॑त्या यज॒तं बृ॒हत् |<span class='RishiDevChandas'>{आत्रेयो यजतः | मित्रावरुणौ | अनुष्टुप्}</span><p>वरु॑ण॒ मित्रार्य॑म॒न् वर्षि॑ष्ठं क्ष॒त्रमा᳚शाथे ||<span class='MantraNumbering'>{1/5}{5.67.1}{5.5.11.1}{4.4.5.1}{421, 4231}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>आ यद्योनिं᳚ हिर॒ण्ययं॒ वरु॑ण॒ मित्र॒ सद॑थः |<span class='RishiDevChandas'>{आत्रेयो यजतः | मित्रावरुणौ | अनुष्टुप्}</span><p>ध॒र्तारा᳚ चर्षणी॒नां य॒न्तं सु॒म्नं रि॑शादसा ||<span class='MantraNumbering'>{2/5}{5.67.2}{5.5.11.2}{4.4.5.2}{421, 4232}</span></td>
+<td class='VargaStyle1'>आ यद्‌ योनिं᳚ हिर॒ण्ययं॒ वरु॑ण॒ मित्र॒ सद॑थः |<span class='RishiDevChandas'>{आत्रेयो यजतः | मित्रावरुणौ | अनुष्टुप्}</span><p>ध॒र्तारा᳚ चर्षणी॒नां य॒न्तं सु॒म्नं रि॑शादसा ||<span class='MantraNumbering'>{2/5}{5.67.2}{5.5.11.2}{4.4.5.2}{421, 4232}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>विश्वे॒ हि वि॒श्ववे᳚दसो॒ वरु॑णो मि॒त्रो, अ᳚र्य॒मा |<span class='RishiDevChandas'>{आत्रेयो यजतः | मित्रावरुणौ | अनुष्टुप्}</span><p>व्र॒ता प॒देव॑ सश्चिरे॒ पान्ति॒ मर्त्यं᳚ रि॒षः ||<span class='MantraNumbering'>{3/5}{5.67.3}{5.5.11.3}{4.4.5.3}{421, 4233}</span></td>
