--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format1/RVS-Kannada-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format1/RVS-Kannada-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 09-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 10-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1701,10 +1701,10 @@
 <td class='SuktaLabel'>[59] ಬಳಿತ್ಥಾದೇವೇತಿ ಪಂಚರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯೋಯಜತೋ ಮಿತ್ರಾವರುಣಾವನುಷ್ಟುಪ್ |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಬಳಿ॒ತ್ಥಾ ದೇ᳚ವ ನಿಷ್ಕೃ॒ತಮಾದಿ॑ತ್ಯಾ ಯಜ॒ತಂ ಬೃ॒ಹತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಯಜತಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ವರು॑ಣ॒ ಮಿತ್ರಾರ್‍ಯ॑ಮ॒ನ್ವರ್ಷಿ॑ಷ್ಠಂ ಕ್ಷ॒ತ್ರಮಾ᳚ಶಾಥೇ ||<span class='MantraNumbering'>{1/5}{4.4.5.1}{5.67.1}{5.5.11.1}{421, 4231}</span></td>
+<td class='VargaStyle1'>ಬಳಿ॒ತ್ಥಾ ದೇ᳚ವ ನಿಷ್ಕೃ॒ತಮಾದಿ॑ತ್ಯಾ ಯಜ॒ತಂ ಬೃ॒ಹತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಯಜತಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ವರು॑ಣ॒ ಮಿತ್ರಾರ್‍ಯ॑ಮ॒ನ್‌ ವರ್ಷಿ॑ಷ್ಠಂ ಕ್ಷ॒ತ್ರಮಾ᳚ಶಾಥೇ ||<span class='MantraNumbering'>{1/5}{4.4.5.1}{5.67.1}{5.5.11.1}{421, 4231}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಆ ಯದ್ಯೋನಿಂ᳚ ಹಿರ॒ಣ್ಯಯಂ॒ ವರು॑ಣ॒ ಮಿತ್ರ॒ ಸದ॑ಥಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಯಜತಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ಧ॒ರ್‍ತಾರಾ᳚ ಚರ್ಷಣೀ॒ನಾಂ ಯಂ॒ತಂ ಸು॒ಮ್ನಂ ರಿ॑ಶಾದಸಾ ||<span class='MantraNumbering'>{2/5}{4.4.5.2}{5.67.2}{5.5.11.2}{421, 4232}</span></td>
+<td class='VargaStyle1'>ಆ ಯದ್‌ ಯೋನಿಂ᳚ ಹಿರ॒ಣ್ಯಯಂ॒ ವರು॑ಣ॒ ಮಿತ್ರ॒ ಸದ॑ಥಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಯಜತಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ಧ॒ರ್‍ತಾರಾ᳚ ಚರ್ಷಣೀ॒ನಾಂ ಯಂ॒ತಂ ಸು॒ಮ್ನಂ ರಿ॑ಶಾದಸಾ ||<span class='MantraNumbering'>{2/5}{4.4.5.2}{5.67.2}{5.5.11.2}{421, 4232}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ವಿಶ್ವೇ॒ ಹಿ ವಿ॒ಶ್ವವೇ᳚ದಸೋ॒ ವರು॑ಣೋ ಮಿ॒ತ್ರೋ, ಅ᳚ರ್ಯ॒ಮಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಯಜತಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ವ್ರ॒ತಾ ಪ॒ದೇವ॑ ಸಶ್ಚಿರೇ॒ ಪಾಂತಿ॒ ಮರ್‍ತ್ಯಂ᳚ ರಿ॒ಷಃ ||<span class='MantraNumbering'>{3/5}{4.4.5.3}{5.67.3}{5.5.11.3}{421, 4233}</span></td>
