--- a/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format3/RVS-Malayalam-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format3/RVS-Malayalam-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (അഷ്ടക: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 09-Jan-2025]</h6>
+<br> [Last updated on: 10-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1703,10 +1703,10 @@
 <td class='SuktaLabel'>[59] ബളിത്ഥാദേവേതി പഞ്ചർചസ്യ സൂക്തസ്യാത്രേയോയജതോ മിത്രാവരുണാവനുഷ്ടുപ് |<span class='MantraNumbering'>{അഷ്ടക:4, അധ്യായ:4}{മണ്ഡല:5, സൂക്ത:67}{അനുവാക:5, സൂക്ത:11}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ബളി॒ത്ഥാദേ᳚വനിഷ്കൃ॒തമാദി॑ത്യായജ॒തംബൃ॒ഹത് | വരു॑ണ॒മിത്രാര്യ॑മ॒ന്വർഷി॑ഷ്ഠംക്ഷ॒ത്രമാ᳚ശാഥേ || 1 || <span class='MantraNumbering'>വർഗ:5</span></td>
+<td class='VargaStyle1'>ബളി॒ത്ഥാദേ᳚വനിഷ്കൃ॒തമാദി॑ത്യായജ॒തംബൃ॒ഹത് | വരു॑ണ॒മിത്രാര്യ॑മ॒ൻവർഷി॑ഷ്ഠംക്ഷ॒ത്രമാ᳚ശാഥേ || 1 || <span class='MantraNumbering'>വർഗ:5</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആയദ്യോനിം᳚ഹിര॒ണ്യയം॒വരു॑ണ॒മിത്ര॒സദ॑ഥഃ | ധ॒ർതാരാ᳚ചർഷണീ॒നാംയ॒ന്തംസു॒മ്നംരി॑ശാദസാ || 2 || </td>
+<td class='VargaStyle1'>ആയദ്‌യോനിം᳚ഹിര॒ണ്യയം॒വരു॑ണ॒മിത്ര॒സദ॑ഥഃ | ധ॒ർതാരാ᳚ചർഷണീ॒നാംയ॒ന്തംസു॒മ്നംരി॑ശാദസാ || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>വിശ്വേ॒ഹിവി॒ശ്വവേ᳚ദസോ॒വരു॑ണോമി॒ത്രോ,അ᳚ര്യ॒മാ | വ്ര॒താപ॒ദേവ॑സശ്ചിരേ॒പാന്തി॒മർത്യം᳚രി॒ഷഃ || 3 || </td>
