--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format1/RVS-Malayalam-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format1/RVS-Malayalam-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ശ്രീ॒ ഗു॒രു॒ഭ്യോ॒ ന॒മഃ॒ ഹരിഃ ഓം ||</h1>
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 08-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 10-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1980,10 +1980,10 @@
 <td class='SuktaLabel'>[67] ബളിത്ഥാദേവേതി പഞ്ചർചസ്യ സൂക്തസ്യാത്രേയോയജതോ മിത്രാവരുണാവനുഷ്ടുപ് |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ബളി॒ത്ഥാ ദേ᳚വ നിഷ്കൃ॒തമാദി॑ത്യാ യജ॒തം ബൃ॒ഹത് |<span class='RishiDevChandas'>{ആത്രേയോ യജതഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>വരു॑ണ॒ മിത്രാര്യ॑മ॒ന്വർഷി॑ഷ്ഠം ക്ഷ॒ത്രമാ᳚ശാഥേ ||<span class='MantraNumbering'>{1/5}{5.67.1}{5.5.11.1}{4.4.5.1}{421, 4231}</span></td>
+<td class='VargaStyle1'>ബളി॒ത്ഥാ ദേ᳚വ നിഷ്കൃ॒തമാദി॑ത്യാ യജ॒തം ബൃ॒ഹത് |<span class='RishiDevChandas'>{ആത്രേയോ യജതഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>വരു॑ണ॒ മിത്രാര്യ॑മ॒ൻ വർഷി॑ഷ്ഠം ക്ഷ॒ത്രമാ᳚ശാഥേ ||<span class='MantraNumbering'>{1/5}{5.67.1}{5.5.11.1}{4.4.5.1}{421, 4231}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആ യദ്യോനിം᳚ ഹിര॒ണ്യയം॒ വരു॑ണ॒ മിത്ര॒ സദ॑ഥഃ |<span class='RishiDevChandas'>{ആത്രേയോ യജതഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>ധ॒ർതാരാ᳚ ചർഷണീ॒നാം യ॒ന്തം സു॒മ്നം രി॑ശാദസാ ||<span class='MantraNumbering'>{2/5}{5.67.2}{5.5.11.2}{4.4.5.2}{421, 4232}</span></td>
+<td class='VargaStyle1'>ആ യദ്‌ യോനിം᳚ ഹിര॒ണ്യയം॒ വരു॑ണ॒ മിത്ര॒ സദ॑ഥഃ |<span class='RishiDevChandas'>{ആത്രേയോ യജതഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>ധ॒ർതാരാ᳚ ചർഷണീ॒നാം യ॒ന്തം സു॒മ്നം രി॑ശാദസാ ||<span class='MantraNumbering'>{2/5}{5.67.2}{5.5.11.2}{4.4.5.2}{421, 4232}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>വിശ്വേ॒ ഹി വി॒ശ്വവേ᳚ദസോ॒ വരു॑ണോ മി॒ത്രോ, അ᳚ര്യ॒മാ |<span class='RishiDevChandas'>{ആത്രേയോ യജതഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>വ്ര॒താ പ॒ദേവ॑ സശ്ചിരേ॒ പാന്തി॒ മർത്യം᳚ രി॒ഷഃ ||<span class='MantraNumbering'>{3/5}{5.67.3}{5.5.11.3}{4.4.5.3}{421, 4233}</span></td>
