--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format4/RVS-Malayalam-F4-M05.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format4/RVS-Malayalam-F4-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 08-Jan-2025]</h6>
+<br> [Last updated on: 10-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -2049,10 +2049,10 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ബളി॒ത്ഥാദേ᳚വനിഷ്കൃ॒തമാദി॑ത്യായജ॒തംബൃ॒ഹത് |<span class='RishiDevChandas'>{ആത്രേയോ യജതഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>വരു॑ണ॒മിത്രാര്യ॑മ॒ന്വർഷി॑ഷ്ഠംക്ഷ॒ത്രമാ᳚ശാഥേ॒(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:5</span></td>
+<td class='VargaStyle1'>ബളി॒ത്ഥാദേ᳚വനിഷ്കൃ॒തമാദി॑ത്യായജ॒തംബൃ॒ഹത് |<span class='RishiDevChandas'>{ആത്രേയോ യജതഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>വരു॑ണ॒മിത്രാര്യ॑മ॒ൻവർഷി॑ഷ്ഠംക്ഷ॒ത്രമാ᳚ശാഥേ॒(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:5</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആയദ്യോനിം᳚ഹിര॒ണ്യയം॒വരു॑ണ॒മിത്ര॒സദ॑ഥഃ |<span class='RishiDevChandas'>{ആത്രേയോ യജതഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>ധ॒ർതാരാ᳚ചർഷണീ॒നാംയ॒ന്തംസു॒മ്നംരി॑ശാദസാ॒(സ്വാഹാ᳚) || 2 || </td>
+<td class='VargaStyle1'>ആയദ്‌യോനിം᳚ഹിര॒ണ്യയം॒വരു॑ണ॒മിത്ര॒സദ॑ഥഃ |<span class='RishiDevChandas'>{ആത്രേയോ യജതഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>ധ॒ർതാരാ᳚ചർഷണീ॒നാംയ॒ന്തംസു॒മ്നംരി॑ശാദസാ॒(സ്വാഹാ᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>വിശ്വേ॒ഹിവി॒ശ്വവേ᳚ദസോ॒വരു॑ണോമി॒ത്രോ,അ᳚ര്യ॒മാ |<span class='RishiDevChandas'>{ആത്രേയോ യജതഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>വ്ര॒താപ॒ദേവ॑സശ്ചിരേ॒പാന്തി॒മർത്യം᳚രി॒ഷഃ(സ്വാഹാ᳚) || 3 || </td>
