--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ஶ்ரீ॒ கு³॒ரு॒ப்⁴யோ॒ ந॒ம॒꞉ ஹரி꞉ ௐ ||</h1>
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 09-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 10-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1701,10 +1701,10 @@
 <td class='SuktaLabel'>[59] ப³ளித்தா²தே³வேதி பஞ்சர்சஸ்ய ஸூக்தஸ்யாத்ரேயோயஜதோ மித்ராவருணாவனுஷ்டுப் |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ப³ளி॒த்தா² தே³᳚வ நிஷ்க்ரு॒ʼதமாதி³॑த்யா யஜ॒தம்ʼ ப்³ரு॒ʼஹத் |<span class='RishiDevChandas'>{ஆத்ரேயோ யஜத꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>வரு॑ண॒ மித்ரார்ய॑ம॒ன்வர்ஷி॑ஷ்ட²ம்ʼ க்ஷ॒த்ரமா᳚ஶாதே² ||<span class='MantraNumbering'>{1/5}{4.4.5.1}{5.67.1}{5.5.11.1}{421, 4231}</span></td>
+<td class='VargaStyle1'>ப³ளி॒த்தா² தே³᳚வ நிஷ்க்ரு॒ʼதமாதி³॑த்யா யஜ॒தம்ʼ ப்³ரு॒ʼஹத் |<span class='RishiDevChandas'>{ஆத்ரேயோ யஜத꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>வரு॑ண॒ மித்ரார்ய॑ம॒ன் வர்ஷி॑ஷ்ட²ம்ʼ க்ஷ॒த்ரமா᳚ஶாதே² ||<span class='MantraNumbering'>{1/5}{4.4.5.1}{5.67.1}{5.5.11.1}{421, 4231}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஆ யத்³யோனிம்᳚ʼ ஹிர॒ண்யயம்॒ʼ வரு॑ண॒ மித்ர॒ ஸத³॑த²꞉ |<span class='RishiDevChandas'>{ஆத்ரேயோ யஜத꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>த⁴॒ர்தாரா᳚ சர்ஷணீ॒நாம்ʼ ய॒ந்தம்ʼ ஸு॒ம்னம்ʼ ரி॑ஶாத³ஸா ||<span class='MantraNumbering'>{2/5}{4.4.5.2}{5.67.2}{5.5.11.2}{421, 4232}</span></td>
+<td class='VargaStyle1'>ஆ யத்³‌ யோனிம்᳚ʼ ஹிர॒ண்யயம்॒ʼ வரு॑ண॒ மித்ர॒ ஸத³॑த²꞉ |<span class='RishiDevChandas'>{ஆத்ரேயோ யஜத꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>த⁴॒ர்தாரா᳚ சர்ஷணீ॒நாம்ʼ ய॒ந்தம்ʼ ஸு॒ம்னம்ʼ ரி॑ஶாத³ஸா ||<span class='MantraNumbering'>{2/5}{4.4.5.2}{5.67.2}{5.5.11.2}{421, 4232}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>விஶ்வே॒ ஹி வி॒ஶ்வவே᳚த³ஸோ॒ வரு॑ணோ மி॒த்ரோ, அ᳚ர்ய॒மா |<span class='RishiDevChandas'>{ஆத்ரேயோ யஜத꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>வ்ர॒தா ப॒தே³வ॑ ஸஶ்சிரே॒ பாந்தி॒ மர்த்யம்᳚ʼ ரி॒ஷ꞉ ||<span class='MantraNumbering'>{3/5}{4.4.5.3}{5.67.3}{5.5.11.3}{421, 4233}</span></td>
