--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format3/RVS-Tamil-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format3/RVS-Tamil-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 09-Jan-2025]</h6>
+<br> [Last updated on: 10-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1706,7 +1706,7 @@
 <td class='VargaStyle1'>ப³ளி॒த்தா²தே³᳚வநிஷ்க்ரு॒ʼதமாதி³॑த்யாயஜ॒தம்ʼப்³ரு॒ʼஹத் | வரு॑ண॒மித்ரார்ய॑ம॒ன்வர்ஷி॑ஷ்ட²ம்ʼக்ஷ॒த்ரமா᳚ஶாதே² || 1 || <span class='MantraNumbering'>வர்க³:5</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஆயத்³யோனிம்᳚ʼஹிர॒ண்யயம்॒ʼவரு॑ண॒மித்ர॒ஸத³॑த²꞉ | த⁴॒ர்தாரா᳚சர்ஷணீ॒நாம்ʼய॒ந்தம்ʼஸு॒ம்னம்ʼரி॑ஶாத³ஸா || 2 || </td>
+<td class='VargaStyle1'>ஆயத்³‌யோனிம்᳚ʼஹிர॒ண்யயம்॒ʼவரு॑ண॒மித்ர॒ஸத³॑த²꞉ | த⁴॒ர்தாரா᳚சர்ஷணீ॒நாம்ʼய॒ந்தம்ʼஸு॒ம்னம்ʼரி॑ஶாத³ஸா || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>விஶ்வே॒ஹிவி॒ஶ்வவே᳚த³ஸோ॒வரு॑ணோமி॒த்ரோ,அ᳚ர்ய॒மா | வ்ர॒தாப॒தே³வ॑ஸஶ்சிரே॒பாந்தி॒மர்த்யம்᳚ʼரி॒ஷ꞉ || 3 || </td>
