--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format3/RVS-Telugu-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format3/RVS-Telugu-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 09-Jan-2025]</h6>
+<br> [Last updated on: 10-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1706,7 +1706,7 @@
 <td class='VargaStyle1'>బళి॒త్థాదే᳚వనిష్కృ॒తమాది॑త్యాయజ॒తంబృ॒హత్ | వరు॑ణ॒మిత్రార్య॑మ॒న్వర్షి॑ష్ఠంక్ష॒త్రమా᳚శాథే || 1 || <span class='MantraNumbering'>వర్గ:5</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఆయద్యోనిం᳚హిర॒ణ్యయం॒వరు॑ణ॒మిత్ర॒సద॑థః | ధ॒ర్తారా᳚చర్షణీ॒నాంయం॒తంసు॒మ్నంరి॑శాదసా || 2 || </td>
+<td class='VargaStyle1'>ఆయద్‌యోనిం᳚హిర॒ణ్యయం॒వరు॑ణ॒మిత్ర॒సద॑థః | ధ॒ర్తారా᳚చర్షణీ॒నాంయం॒తంసు॒మ్నంరి॑శాదసా || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>విశ్వే॒హివి॒శ్వవే᳚దసో॒వరు॑ణోమి॒త్రో,అ᳚ర్య॒మా | వ్ర॒తాప॒దేవ॑సశ్చిరే॒పాంతి॒మర్త్యం᳚రి॒షః || 3 || </td>
