--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format3/RVS-Devanagari-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format3/RVS-Devanagari-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 09-Jan-2025]</h6>
+<br> [Last updated on: 10-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1706,7 +1706,7 @@
 <td class='VargaStyle1'>बळि॒त्थादे᳚वनिष्कृ॒तमादि॑त्यायज॒तंबृ॒हत् | वरु॑ण॒मित्रार्य॑म॒न्वर्षि॑ष्ठंक्ष॒त्रमा᳚शाथे || 1 || <span class='MantraNumbering'>वर्ग:5</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>आयद्योनिं᳚हिर॒ण्ययं॒वरु॑ण॒मित्र॒सद॑थः | ध॒र्तारा᳚चर्षणी॒नांय॒न्तंसु॒म्नंरि॑शादसा || 2 || </td>
+<td class='VargaStyle1'>आयद्‌योनिं᳚हिर॒ण्ययं॒वरु॑ण॒मित्र॒सद॑थः | ध॒र्तारा᳚चर्षणी॒नांय॒न्तंसु॒म्नंरि॑शादसा || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>विश्वे॒हिवि॒श्ववे᳚दसो॒वरु॑णोमि॒त्रो,अ᳚र्य॒मा | व्र॒ताप॒देव॑सश्चिरे॒पान्ति॒मर्त्यं᳚रि॒षः || 3 || </td>
