--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format4/RVS-Kannada-F4-M05.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format4/RVS-Kannada-F4-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 08-Jan-2025]</h6>
+<br> [Last updated on: 10-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -2049,10 +2049,10 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಬಳಿ॒ತ್ಥಾದೇ᳚ವನಿಷ್ಕೃ॒ತಮಾದಿ॑ತ್ಯಾಯಜ॒ತಂಬೃ॒ಹತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಯಜತಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ವರು॑ಣ॒ಮಿತ್ರಾರ್‍ಯ॑ಮ॒ನ್ವರ್ಷಿ॑ಷ್ಠಂಕ್ಷ॒ತ್ರಮಾ᳚ಶಾಥೇ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:5</span></td>
+<td class='VargaStyle1'>ಬಳಿ॒ತ್ಥಾದೇ᳚ವನಿಷ್ಕೃ॒ತಮಾದಿ॑ತ್ಯಾಯಜ॒ತಂಬೃ॒ಹತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಯಜತಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ವರು॑ಣ॒ಮಿತ್ರಾರ್‍ಯ॑ಮ॒ನ್‌ವರ್ಷಿ॑ಷ್ಠಂಕ್ಷ॒ತ್ರಮಾ᳚ಶಾಥೇ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:5</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಆಯದ್ಯೋನಿಂ᳚ಹಿರ॒ಣ್ಯಯಂ॒ವರು॑ಣ॒ಮಿತ್ರ॒ಸದ॑ಥಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಯಜತಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ಧ॒ರ್‍ತಾರಾ᳚ಚರ್ಷಣೀ॒ನಾಂಯಂ॒ತಂಸು॒ಮ್ನಂರಿ॑ಶಾದಸಾ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
+<td class='VargaStyle1'>ಆಯದ್‌ಯೋನಿಂ᳚ಹಿರ॒ಣ್ಯಯಂ॒ವರು॑ಣ॒ಮಿತ್ರ॒ಸದ॑ಥಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಯಜತಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ಧ॒ರ್‍ತಾರಾ᳚ಚರ್ಷಣೀ॒ನಾಂಯಂ॒ತಂಸು॒ಮ್ನಂರಿ॑ಶಾದಸಾ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ವಿಶ್ವೇ॒ಹಿವಿ॒ಶ್ವವೇ᳚ದಸೋ॒ವರು॑ಣೋಮಿ॒ತ್ರೋ,ಅ᳚ರ್ಯ॒ಮಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಯಜತಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ವ್ರ॒ತಾಪ॒ದೇವ॑ಸಶ್ಚಿರೇ॒ಪಾಂತಿ॒ಮರ್‍ತ್ಯಂ᳚ರಿ॒ಷಃ(ಸ್ವಾಹಾ᳚) || 3 || </td>
