--- a/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| శ్రీ॒ గు॒రు॒భ్యో॒ న॒మః॒ హరిః ఓం ||</h1>
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (మండల: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 08-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 10-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1980,10 +1980,10 @@
 <td class='SuktaLabel'>[67] బళిత్థాదేవేతి పంచర్చస్య సూక్తస్యాత్రేయోయజతో మిత్రావరుణావనుష్టుప్ |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>బళి॒త్థా దే᳚వ నిష్కృ॒తమాది॑త్యా యజ॒తం బృ॒హత్ |<span class='RishiDevChandas'>{ఆత్రేయో యజతః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>వరు॑ణ॒ మిత్రార్య॑మ॒న్వర్షి॑ష్ఠం క్ష॒త్రమా᳚శాథే ||<span class='MantraNumbering'>{1/5}{5.67.1}{5.5.11.1}{4.4.5.1}{421, 4231}</span></td>
+<td class='VargaStyle1'>బళి॒త్థా దే᳚వ నిష్కృ॒తమాది॑త్యా యజ॒తం బృ॒హత్ |<span class='RishiDevChandas'>{ఆత్రేయో యజతః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>వరు॑ణ॒ మిత్రార్య॑మ॒న్ వర్షి॑ష్ఠం క్ష॒త్రమా᳚శాథే ||<span class='MantraNumbering'>{1/5}{5.67.1}{5.5.11.1}{4.4.5.1}{421, 4231}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఆ యద్యోనిం᳚ హిర॒ణ్యయం॒ వరు॑ణ॒ మిత్ర॒ సద॑థః |<span class='RishiDevChandas'>{ఆత్రేయో యజతః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>ధ॒ర్తారా᳚ చర్షణీ॒నాం యం॒తం సు॒మ్నం రి॑శాదసా ||<span class='MantraNumbering'>{2/5}{5.67.2}{5.5.11.2}{4.4.5.2}{421, 4232}</span></td>
+<td class='VargaStyle1'>ఆ యద్‌ యోనిం᳚ హిర॒ణ్యయం॒ వరు॑ణ॒ మిత్ర॒ సద॑థః |<span class='RishiDevChandas'>{ఆత్రేయో యజతః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>ధ॒ర్తారా᳚ చర్షణీ॒నాం యం॒తం సు॒మ్నం రి॑శాదసా ||<span class='MantraNumbering'>{2/5}{5.67.2}{5.5.11.2}{4.4.5.2}{421, 4232}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>విశ్వే॒ హి వి॒శ్వవే᳚దసో॒ వరు॑ణో మి॒త్రో, అ᳚ర్య॒మా |<span class='RishiDevChandas'>{ఆత్రేయో యజతః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>వ్ర॒తా ప॒దేవ॑ సశ్చిరే॒ పాంతి॒ మర్త్యం᳚ రి॒షః ||<span class='MantraNumbering'>{3/5}{5.67.3}{5.5.11.3}{4.4.5.3}{421, 4233}</span></td>
